Hitlist and Aggregated tables - fix for scroll on smaller screens

--- a/src/aggregatedTable/aggregatedTable.css
+++ b/src/aggregatedTable/aggregatedTable.css
@@ -239,7 +239,7 @@
 }
 
 .aggregatedTableWrapper {
-  margin-right: 8px;
+  /*margin-right: 8px;*/
 }
 
 
