--- a/src/project-specific-stuff/project-specific-styles.css
+++ b/src/project-specific-stuff/project-specific-styles.css
@@ -13,7 +13,7 @@
   font-size: 10px;
   text-align: left;
   line-height: 12px;
-  padding: 8px;
+  padding: 8px 0;
 }
 
 .legend-wrapper {
